@@ -74,7 +74,7 @@
          "web" : "https://github.com/s-aska/p5-WebService-Dropbox"
       }
    },
-   "version" : "2.03",
+   "version" : "2.04",
    "x_authority" : "cpan:ASKADNA",
    "x_contributors" : [
       "Fuji, Goro <g.psy.va@gmail.com>",
